extensions: tab-center-reborn: Fix URL bar going out of bounds

--- a/theme/extensions/tab-center-reborn.css
+++ b/theme/extensions/tab-center-reborn.css
@@ -133,11 +133,7 @@
 
 @media (max-width: 630px) {
     #urlbar-container {
-        min-width: 100% !important;
-    }
-
-    #menubar-items {
-        display: none !important;
+        width: auto !important;
     }
 }
 
